sonar refactorings